--- a/hi.html
+++ b/hi.html
@@ -65,7 +65,7 @@
   </style>
 </head>
 <body>
-  <h1 id="question">กินข้าวกันเถอะจ้ะ</h1>
+  <h1 id="question">กินข้าวกันเถอะจ้ะ v7</h1>
   <div id="btnContainer">
     <button class="btn" id="yesBtn">พีพีน่ารัก</button>
     <button class="btn" id="noBtn">พีพีไม่น่ารัก</button>
